# sdv_lidar

./: README.md
LIO-SAM/config/: params.yaml
LIO-SAM/launch/: run.launch.py
lidar3d_clustering/: CMakeLists.txt  package.xml
lidar3d_clustering/config/: detection_variables.yaml
lidar3d_clustering/launch/: lidar3d.launch.py
lidar3d_clustering/src/: ObjectDetection.cpp
lidar3d_clustering/verions_2/: ObjectDetection_V1.cpp  ObjectDetection_V2.cpp  ObjectDetection_V3.cpp  ObjectDetection_V4.cpp
lidar_ground_getter/: CMakeLists.txt  package.xml
lidar_ground_getter/launch/: lidar_ground.launch.py
lidar_ground_getter/src/: LidarGround.cpp
lidar_imu_sync/: CMakeLists.txt  package.xml
lidar_imu_sync/src/: LidarImuSync.cpp
sdv_lidar_processing/: CMakeLists.txt  package.xml
sdv_lidar_processing/launch/: lidar_Processing.launch.py
sdv_lidar_processing/src/: Processing_lidar.cpp
sdv_robot_description/: CMakeLists.txt  package.xml
sdv_robot_description/launch/: display.launch.py
sdv_robot_description/rviz/: sdv_config.rviz
sdv_robot_description/urdf/: robot.urdf  sdv_car.urdf  wheels_sdv.xacro  zf_car.urdf
voxel_grid_filter/: CMakeLists.txt  package.xml
voxel_grid_filter/launch/: filter.launch.py
voxel_grid_filter/src/: VoxelGrid.cpp
